--- a/packages/brick-container/src/styles/variables.css
+++ b/packages/brick-container/src/styles/variables.css
@@ -167,7 +167,6 @@
   --antd-link-hover-color: #2893f7;
   --antd-link-active-color: #0058c4;
   --antd-text-color-secondary: rgba(0, 0, 0, 0.45);
-  --antd-text-color: rgba(0, 0, 0, 0.85);
 
   /* antd components */
   --antd-card-background: var(--antd-component-background);
